--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
     <script src="jquery-3.3.1.min.js"></script>
     <script src="jscript.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 
 
